# avrix-launcher-client

./: .eslintrc.cjs  .gitignore  .prettierignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  postcss.config.cjs  tailwind.config.cjs  tsconfig.json  vite.config.js
.github/workflows/: build-app.yml  build-updater.yml  release.yml
.tauri/: avrix-launcher.key.pub
docs/: UiButton.md  ui-components.md
installer/: README-updater.md  setup.iss  update.iss  updater.iss
scripts/: bump-version.cjs  copy-exe.cjs
src/: App.vue  main.ts  shims-vue.d.ts  style.css  theme.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: install.rs  launch.rs  logger.rs  main.rs  metadata.rs  models.rs  store.rs  util.rs  versions.rs  workshop.rs
src/common/enums/: Environment.ts  NewsTag.ts
src/components/common/: Icon.vue
src/components/launch/: LaunchCard.vue  LaunchView.vue  NewsCard.vue
src/components/layout/: TitleBar.vue
src/components/layout/sidebar/: Sidebar.vue  SidebarItem.vue
src/components/logs/: FiltersBar.vue  LogEntryRow.vue  LogsView.vue
src/components/navigation/: RouteBreadcrumb.vue
src/components/playtest/: PlayTestView.vue
src/components/plugins/: PluginsView.vue
src/components/plugins/list/: PluginListItem.vue
src/components/plugins/modals/: PluginLogsModal.vue  PluginUrlModal.vue  PluginValidationModal.vue  WorkshopScanModal.vue  WorkshopSelectionModal.vue
src/components/plugins/sidebar/: PluginsEnvPanel.vue
src/components/plugins/toolbar/: EnvFilter.vue  SortControl.vue
src/components/settings/: SettingsModal.vue
src/components/settings/sections/: SettingsSectionAbout.vue  SettingsSectionGame.vue  SettingsSectionPlugins.vue  SettingsSectionUpdates.vue
src/components/ui/buttons/: GlowButton.vue  UiBadge.vue  UiButton.vue
src/components/ui/colors/: uiColors.ts
src/components/ui/data/: UiSelect.vue
src/components/ui/feedback/: ToastContainer.vue
src/components/ui/input/: RangeInput.vue  UiCheckbox.vue  UiInput.vue  UiSearchInput.vue
src/components/ui/overlays/: BaseModal.vue  ConfirmModal.vue  (+2 more)
src/components/versions/: VersionsView.vue
src/composables/: useLogs.ts  useSettings.ts  useSettingsModal.ts  useToasts.ts  useUpdater.ts
src/helpers/: index.d.ts  pluginFormat.ts  sizeHash.ts
src/interfaces/: index.d.ts  logs.ts  news.ts  plugins.ts
src/router/: index.ts
(+1 files in other folders)
