[package]
name = "avrix-launcher"
version = "0.1.1"
edition = "2021"

[dependencies]
# Passage à Tauri 2.x (dernière version stable au 2025-09: 2.8.5)
tauri = { version = "2.8.5", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
which = "6"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
serde_yaml = "0.9"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
regex = "1"
minreq = { version = "2", features = ["https"] }
sha2 = "0.10"
hex = "0.4"
once_cell = "1"
chrono = { version = "0.4", features = ["clock", "std"] }
tauri-plugin-store = "2"
sysinfo = { version = "0.37.0", default-features = false, features = ["system"] }
url = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"

[build-dependencies]
# tauri-build 2.x compatible avec tauri 2.x (2.4.1 est la dernière au 2025-09)
tauri-build = { version = "2.4.1", features = [] }

[profile.release]
codegen-units = 1
lto = true
strip = true
opt-level = 'z'
panic = 'abort'

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
