[package]
name = "avrix-launcher"
version = "0.2.2"
edition = "2021"

[dependencies]
tauri = { version = "2.8.5", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
which = "6"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
serde_yaml = "0.9"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
regex = "1"
minreq = { version = "2", features = ["https"] }
sha2 = "0.10"
hex = "0.4"
once_cell = "1"
chrono = { version = "0.4", features = ["clock", "std"] }
tauri-plugin-store = "2"
sysinfo = { version = "0.37.0", default-features = false, features = ["system"] }
url = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
base64 = "0.21"
 fs_extra = "1.3"
tauri-plugin-stronghold = "2"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[profile.release]
codegen-units = 1
lto = true
strip = true
opt-level = 'z'
panic = 'abort'

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
